# CheckCoverage.cmake

./: CMakeLists.txt  README.md
.github/workflows/: test.yaml
cmake/: CheckCoverage.cmake  CheckCoverageConfig.cmake
test/: BuildSampleTest.cmake  CMakeLists.txt  CheckCoverageTest.cmake  check_coverage.cmake
test/sample/: CMakeLists.txt
test/sample/src/: fibonacci.cpp
test/sample/test/: fibonacci_test.cpp
